--- a/finalproject-front/src/app/modules/finalProject/components/user/user.component.scss
+++ b/finalproject-front/src/app/modules/finalProject/components/user/user.component.scss
@@ -37,6 +37,7 @@ h1 {
     border: 0 none;
     background: #ef32d9;
     color: black;
+    font-size: 1.5vw;
     background: -webkit-linear-gradient(to left, #b1f1f0, #f3aeeb);
     background: linear-gradient(to left, #b1f1f0, #f3aeeb);
 }
