--- a/finalproject-front/src/app/modules/finalProject/components/register/register.component.css
+++ b/finalproject-front/src/app/modules/finalProject/components/register/register.component.css
@@ -3,6 +3,11 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
+.material-icons {
+    display: inline-flex;
+    vertical-align: middle;
+}
+
 h1 {
     font-family: 'Courier New', Courier, monospace;
     font-weight: bolder;
