--- a/finalproject-front/src/app/modules/finalProject/components/add-edit-recipe/add-edit-recipe.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/add-edit-recipe/add-edit-recipe.component.html
@@ -21,6 +21,7 @@
         </div>
         <div class="form-group">
             <label>Preparación</label>
+            <button> Negrita</button>
             <textarea formControlName="preparation" class="form-control" rows="3"></textarea>
         </div>
         <div class="form-group">
