--- a/finalproject-front/src/app/modules/finalProject/components/recipe/recipe.component.css
+++ b/finalproject-front/src/app/modules/finalProject/components/recipe/recipe.component.css
@@ -4,6 +4,7 @@
 
 .shadowRecipe {
     box-shadow: 5px 9px 15px 2px #000000;
+    width: 30vw;
 }
 
 a:hover {
@@ -12,4 +13,61 @@ a:hover {
 
 .noBorder {
     border: none;
+}
+
+.btn-formato {
+    color: #0099cc;
+    background: transparent;
+    border: 2px solid #ccd8ef;
+    border-radius: 6px;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 10px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s;
+    /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    text-decoration: none;
+    text-transform: uppercase;
+    background-color: white;
+    border: 2px solid #ccd8ef;
+    font-weight: bolder;
+    color: gray;
+    -webkit-border-radius: 20vw;
+    -moz-border-radius: 20vw;
+    border-radius: 20vw;
+}
+
+.btn-formato:hover {
+    background-color: #ccd8ef;
+    color: black;
+}
+
+.iconosGrandes {
+    width: 8vw;
+}
+
+.iconosPeques {
+    width: 3vw;
+}
+
+h1 {
+    font: oblique bold 2.5vw cursive;
+    color: #9C689A;
+}
+
+span.subtitulo {
+    font-weight: bolder;
+    font-size: 1.5vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+a.cocinero {
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1vw;
 }
