--- a/finalproject-front/src/app/modules/finalProject/components/user-recipes/user-recipes.component.css
+++ b/finalproject-front/src/app/modules/finalProject/components/user-recipes/user-recipes.component.css
@@ -1,3 +1,10 @@
+h2 {
+    font-weight: bolder;
+    font-family: 'Courier New', Courier, monospace;
+    color: #E36BDF;
+    font-size: 2vw;
+}
+
 h3 {
     font-weight: bolder;
 }
@@ -30,4 +37,58 @@ td:hover {
 
 .row {
     margin-top: 8vh;
+}
+
+.headColor {
+    background-color: #ebdbea;
+}
+
+tr:nth-child(even) {
+    background-color: #ebdbea;
+}
+
+.btn-flotante {
+    font-size: 16px;
+    /* Cambiar el tamaño de la tipografia */
+    text-transform: uppercase;
+    /* Texto en mayusculas */
+    font-weight: bold;
+    /* Fuente en negrita o bold */
+    color: #ffffff;
+    /* Color del texto */
+    border-radius: 5px;
+    /* Borde del boton */
+    letter-spacing: 2px;
+    /* Espacio entre letras */
+    background-color: #f3b8ee;
+    /* Color de fondo */
+    padding: 18px 30px;
+    /* Relleno del boton */
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    transition: all 300ms ease 0ms;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    z-index: 99;
+}
+
+.btn-flotante:hover {
+    background-color: #c3c4db;
+    /* Color de fondo al pasar el cursor */
+    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+    transform: translateY(-7px);
+}
+
+@media only screen and (max-width: 600px) {
+    .btn-flotante {
+        font-size: 14px;
+        padding: 12px 20px;
+        bottom: 20px;
+        right: 20px;
+    }
+}
+
+.icono {
+    height: 4vh;
+    margin-right: 2vw;
 }
