Home Style and popUp saveRecipe added

--- a/finalproject-front/src/app/components/navBar/navBar.component.html
+++ b/finalproject-front/src/app/components/navBar/navBar.component.html
@@ -11,7 +11,7 @@
                 <a class="nav-link" (click)="recetas()">Recetas</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" (click)="recetasGuardadas()">Recetas Guardadas</a>
+                <a class="nav-link" (click)="recetasGuardadas()">Recetas Favoritas</a>
             </li>
             <li class="nav-item inline my-2 my-lg-0">
                 <nav>
