--- a/finalproject-front/src/app/modules/finalProject/components/home/home.component.html
+++ b/finalproject-front/src/app/modules/finalProject/components/home/home.component.html
@@ -2,49 +2,54 @@
 </app-navBar>
 <div *ngIf="user">
     <div class="fondo" *ngIf="isLoadingResult===true">
-        <h1 class="card-title">Hola {{user.name}}</h1>
-        <p>¿Que te gustaría comer hoy?</p>
-        <div class="ng-autocomplete">
-            <ng-autocomplete [data]="data" [searchKeyword]="keyword" (selected)='selectEvent($event)' (inputChanged)='onChangeSearch($event)' (inputFocused)='onFocused($event)' [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate">
-            </ng-autocomplete>
+        <div class="ml-5">
+            <h1 class="card-title textStyle" id="h1Style">Hola {{user.name}},</h1>
+            <p class="textStyle mb-5">¿Que te gustaría comer hoy?</p>
+            <div class="ng-autocomplete text-center ">
+                <ng-autocomplete [data]="data " [searchKeyword]="keyword " (selected)='selectEvent($event)' (inputChanged)='onChangeSearch($event)' (inputFocused)='onFocused($event)' [itemTemplate]="itemTemplate " [notFoundTemplate]="notFoundTemplate ">
+                </ng-autocomplete>
 
-            <ng-template #itemTemplate let-item>
-                <a [innerHTML]="item.name"></a>
-            </ng-template>
+                <ng-template #itemTemplate let-item>
+                    <a [innerHTML]="item.name "></a>
+                </ng-template>
 
-            <ng-template #notFoundTemplate let-notFound>
-                <div [innerHTML]="notFound"></div>
-            </ng-template>
+                <ng-template #notFoundTemplate let-notFound>
+                    <div [innerHTML]="notFound "></div>
+                </ng-template>
+            </div>
         </div>
     </div>
 </div>
-<div class="container-fluid mt-3" *ngIf="lastRecipes">
+<div class="container-fluid mt-3 mb-2 " *ngIf="lastRecipes ">
     <h2 class="text-center">Ultimas recetas</h2>
-    <div class="row">
-        <div class="card card-recipe" *ngFor="let recipe of lastRecipes" (click)="findRecipeS(recipe.id)">
-            <img class="card-img-top" src="api/recipes/uploads/img/{{recipe.img}}" alt="Card image cap">
-            <div class="card-body text-center">
-                <h3 class="card-title">{{recipe.name}}</h3>
+    <div class="row ">
+        <div class="slider ">
+            <ul>
+                <li class="card card-recipe " *ngFor="let recipe of lastRecipes " (click)="findRecipeS(recipe.id) ">
+                    <img class="card-img-top " src="api/recipes/uploads/img/{{recipe.img}} " alt="Card image cap ">
+                    <div class="card-body text-center ">
+                        <h3 class="card-title ">{{recipe.name}}</h3>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="container-fluid mt-3 mb-2" *ngIf="savedRecipe ">
+        <h2 class="text-center " *ngIf="savedRecipe['length']!==0 ">Recetas favoritas</h2>
+        <div class="row ">
+            <div class="card card-recipe " *ngFor="let savedR of savedRecipe | paginate:{itemsPerPage:4, currentPage: 1} " (click)="findRecipeS(savedR.recipes.id) ">
+                <img class="card-img-top " src="api/recipes/uploads/img/{{savedR.recipes.img}} " alt="Card image cap ">
+                <div class="card-body text-center ">
+                    <h3 class="card-title ">{{savedR.recipes.name}}</h3>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="container-fluid mt-3" *ngIf="savedRecipe">
-    <h2 class="text-center" *ngIf="savedRecipe['length']!==0">Recetas favoritas</h2>
-    <div class="row">
-        <div class="card card-recipe" *ngFor="let savedR of savedRecipe | paginate:{itemsPerPage:4, currentPage: 1}" (click)="findRecipeS(savedR.recipes.id)">
-            <img class="card-img-top" src="api/recipes/uploads/img/{{savedR.recipes.img}}" alt="Card image cap">
-            <div class="card-body text-center">
-                <h3 class="card-title">{{savedR.recipes.name}}</h3>
-            </div>
+    <a *ngIf="user && user.roles[0].name==='ROLE_CREATOR' " class="btn-flotante " (click)="addRecipe() "><img src="assets/icons/mas.png " class="icono ">Añadir nueva receta</a>
+    <div class="borderTop"></div>
+    <div container-fluid class="card text-center mb-2" *ngIf="labels ">
+        <div class="card-body ">
+            <h2 class="text-center ">Explorar todas las categorías de recetas</h2>
+            <button *ngFor="let label of labels " (click)="getLabel(label.id) " class="btn btn-info ml-3 mr-3 mt- mb-3 label btn-formato ">{{label.name}}</button>
         </div>
     </div>
-</div>
-<a *ngIf="user && user.roles[0].name==='ROLE_CREATOR'" class="btn-flotante" (click)="addRecipe()"><img src="assets/icons/mas.png" class="icono">Añadir nueva receta</a>
-
-<div class="card text-center " *ngIf="labels">
-    <div class="card-body ">
-        <h2 class="text-center">Explorar todas las categorías de recetas</h2>
-        <button *ngFor="let label of labels" (click)="getLabel(label.id)" class="btn btn-info ml-3 mr-3 mt- mb-3 label btn-formato">{{label.name}}</button>
-    </div>
-</div>
