--- a/finalproject-front/src/app/modules/finalProject/components/add-edit-recipe/add-edit-recipe.component.css
+++ b/finalproject-front/src/app/modules/finalProject/components/add-edit-recipe/add-edit-recipe.component.css
@@ -6,10 +6,10 @@ select {
 }
 
 label {
-    font-weight: 100;
-    font-size: 2vw;
+    font-weight: 600;
+    font-size: 1.5vw;
     color: black;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 img {
@@ -17,5 +17,56 @@ img {
 }
 
 .file-width {
-    width: 30vw;
+    width: 35vw;
+}
+
+.inputPeq {
+    width: 20vw;
+}
+
+div.ck.ck-reset.ck-editor.ck-rounded-corners {
+    width: 90vw;
+}
+
+h2 {
+    font-weight: bolder;
+    font-family: 'Courier New', Courier, monospace;
+    color: #E36BDF;
+    font-size: 2vw;
+}
+
+.progress {
+    height: 40px;
+}
+
+.custom-input-file {
+    background-color: #941B80;
+    color: #fff;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0 auto 0;
+    min-height: 15px;
+    overflow: hidden;
+    padding: 10px;
+    position: relative;
+    text-align: center;
+    width: 400px;
+}
+
+.custom-input-file .input-file {
+    border: 10000px solid transparent;
+    cursor: pointer;
+    font-size: 10000px;
+    margin: 0;
+    opacity: 0;
+    outline: 0 none;
+    padding: 0;
+    position: absolute;
+    right: -1000px;
+    top: -1000px;
+}
+
+.shadowRecipe {
+    width: 20vw;
 }
